Fix sidebar header overlap. header style was set to position fixed rendering it over top of the following h3 element.

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -26,7 +26,6 @@ body{
   line-height: 1;
 }
 header{
-  position: absolute;
   z-index: 100;
 }
 ul, ol{
